# fitplate-coach

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: .env.example  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/ai/: analyzer.py  cost.py  openai_provider.py  prompts.py  provider.py
apps/api/app/evaluation/: __main__.py  runner.py
apps/api/app/mock/: __init__.py  density.py  food_analyzer.py
apps/api/app/observability/: log_writer.py  model_run.py
apps/api/app/routers/: food.py
apps/api/app/schemas/: food.py
apps/api/evaluation/: report.json
apps/api/evaluation/food_analysis/: cases.json
apps/api/prompts/food_analysis/: PROMPT_LOG.md  v1.txt
apps/api/tests/: conftest.py  test_ai_food_analyzer.py  test_ai_provider_protocol.py  test_analyzer_adapter.py  test_config.py  test_cost.py  test_evaluation.py  test_evaluation_report_generation.py  test_food_analyze_mock.py  test_food_analyze_upload.py  test_food_corrections_mock.py  test_health.py  test_model_run_logging.py  test_openai_provider.py  test_openai_real_provider.py  test_prompt_registry.py
apps/web/: eslint.config.mjs  package.json  playwright.config.ts
docs/: AI_SAFETY.md  API_CONTRACT.md  ARCHITECTURE.md  DATA_MAP.md  IMPLEMENTATION_PLAN.md  PORTFOLIO_NOTES.md  PORTFOLIO_WALKTHROUGH.md  PRD.md
docs/adr/: 0001-ai-integration-strategy.md  0002-multipart-image-upload.md  0003-real-ai-provider.md
docs/evaluation/: REPORT.md
docs/runbooks/: eval-maintenance.md  real-ai-local.md
(+13 files in other folders)
