[project]
name = "fitplate-api"
version = "0.1.0"
description = "Minimal FastAPI backend for FitPlate Coach."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
